--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -2513,7 +2513,7 @@
     </p>
     <ul>
       <li>
-        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_50" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_50" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
       <li>
         Gui: Add "please wait" message when building SQLite indexes.
