--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -126,10 +126,10 @@
           2016-10-01
         </td>
         <td class='cell_center'>
-          2015-08-06
+          2016-10-01
         </td>
         <td class='cell_center'>
-          Dump in progress
+          Dump complete
         </td>
         <td class='cell_center'>
           sqlite3
@@ -158,10 +158,10 @@
           n
         </td>
         <td class='cell_center'>
-          2016-09-01
+          2016-10-01
         </td>
         <td class='cell_center'>
-          2015-08-06
+          2016-10-01
         </td>
         <td class='cell_center'>
           Dump complete
@@ -190,13 +190,13 @@
           en.wikibooks.org
         </td>
         <td class='cell_center'>
-          n
+          y
         </td>
         <td class='cell_center'>
           2016-09-01
         </td>
         <td class='cell_center'>
-          2015-08-07
+          2016-10-01
         </td>
         <td class='cell_center'>
           Dump complete
@@ -225,13 +225,13 @@
           en.wikinews.org
         </td>
         <td class='cell_center'>
-          n
+          y
         </td>
         <td class='cell_center'>
           2016-09-01
         </td>
         <td class='cell_center'>
-          2015-08-06
+          2016-10-01
         </td>
         <td class='cell_center'>
           Dump complete
@@ -266,7 +266,7 @@
           2016-10-01
         </td>
         <td class='cell_center'>
-          2015-08-05
+          2016-10-01
         </td>
         <td class='cell_center'>
           Dump complete
@@ -298,7 +298,7 @@
           n
         </td>
         <td class='cell_center'>
-          1969-12-31
+          2016-09-01
         </td>
         <td class='cell_center'>
         </td>
@@ -306,13 +306,13 @@
           &lt;&lt;NULL&gt;&gt;
         </td>
         <td class='cell_center'>
-          xdat
-        </td>
-        <td class='cell_center'>
-          v1
+          sqlite3
         </td>
         <td class='cell_center'>
           v2
+        </td>
+        <td class='cell_center'>
+          v1
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikipedia.org_old")'>Import</button>
@@ -329,13 +329,13 @@
           en.wikiquote.org
         </td>
         <td class='cell_center'>
-          n
+          y
         </td>
         <td class='cell_center'>
           2016-09-01
         </td>
         <td class='cell_center'>
-          2015-08-06
+          2016-10-01
         </td>
         <td class='cell_center'>
           Dump complete
@@ -364,13 +364,13 @@
           en.wiktionary.org
         </td>
         <td class='cell_center'>
-          n
+          y
         </td>
         <td class='cell_center'>
           2016-06-01
         </td>
         <td class='cell_center'>
-          2015-08-07
+          2016-10-01
         </td>
         <td class='cell_center'>
           Dump complete
@@ -399,25 +399,25 @@
           fr.wikipedia.org
         </td>
         <td class='cell_center'>
-          n
+          y
         </td>
         <td class='cell_center'>
-          2016-09-01
+          1969-12-31
         </td>
         <td class='cell_center'>
-          2015-08-06
+          2016-10-01
         </td>
         <td class='cell_center'>
           Dump complete
         </td>
         <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
+          xdat
         </td>
         <td class='cell_center'>
           v1
+        </td>
+        <td class='cell_center'>
+          v2
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikipedia.org")'>Import</button>
@@ -502,13 +502,13 @@
           simple.wikibooks.org
         </td>
         <td class='cell_center'>
-          n
+          y
         </td>
         <td class='cell_center'>
           2015-10-02
         </td>
         <td class='cell_center'>
-          2015-08-05
+          2016-10-01
         </td>
         <td class='cell_center'>
           Dump complete
@@ -540,10 +540,10 @@
           n
         </td>
         <td class='cell_center'>
-          2016-09-01
+          2016-10-01
         </td>
         <td class='cell_center'>
-          2015-08-06
+          2016-10-01
         </td>
         <td class='cell_center'>
           Dump complete
@@ -552,7 +552,7 @@
           sqlite3
         </td>
         <td class='cell_center'>
-          v2
+          v0
         </td>
         <td class='cell_center'>
           v1
@@ -578,7 +578,7 @@
           2016-10-02
         </td>
         <td class='cell_center'>
-          2015-08-05
+          2016-10-01
         </td>
         <td class='cell_center'>
           Dump complete
