--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -88,37 +88,20 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v3.9.4.2 features the following:
+      v3.10.3.1 features the following:
     </p>
     <ul>
       <li>
-        (PC) Show Catgories for pages with more than one word in the title
-      </li>
-    </ul>
-    <p>
-      v3.9.4.1 features the following:
-    </p>
-    <ul>
-      <li>
-        (Wiki) Release 2016-09 French, English and German Wikipedia
+        (Wiki) Release 2016-10 English and German Wikipedia
       </li>
       <li>
-        (PC) More minor Category fixes including large categories, dynamic page list and wikidata.org
+        (PC) Multiple category changes, including performance, international sorting, numeric sorting, and HTML database loading
       </li>
       <li>
-        (PC) Page sync shows math and video images
+        (PC) (PC) Fix for "Script error: index out of bounds" on 2016-10 enwiki pages
       </li>
       <li>
-        (PC / Android) Download Central does not loop endlessly if wrong file size downloaded
-      </li>
-      <li>
-        (PC) Show pages in MediaWiki namespace
-      </li>
-      <li>
-        (PC) Run GUI on Raspberry Pi
-      </li>
-      <li>
-        (PC) More parser fixes including Scribunto regex at end of string and gaps in argument keys
+        (PC) Add custom scripting support through standalone javascript / lua files
       </li>
     </ul>
     <p>
@@ -211,7 +194,7 @@
     </h5>
     <ul>
       <li>
-        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_12" title="Dashboard/Import/Offline">import offline</a>.
+        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_12" title="Dashboard/Import/Offline" class="xowa-visited">import offline</a>.
       </li>
     </ul>
     <h5>
@@ -249,7 +232,7 @@
       <span class="mw-headline" id="Upgrade_users">Upgrade users</span>
     </h2>
     <p>
-      If you are upgrading from any version before v3.9.1, you should download a xowa_app_v3.9.1+ file.
+      If you are upgrading from any version before v3.10.1, you should download a xowa_app_v3.10.1+ file.
     </p>
     <ul>
       <li>
@@ -389,7 +372,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_35" title="Dashboard/Import/Offline">Import Offline</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_35" title="Dashboard/Import/Offline" class="xowa-visited">Import Offline</a>
         </td>
         <td>
           Import a wiki through a dump; import also through script; also upgrade category to version 2
