--- a/home/wiki/Options/Scripting.html
+++ b/home/wiki/Options/Scripting.html
@@ -296,7 +296,7 @@ li.active a, li.active a:hover
         </div><br>
          
         <p>
-          For more information, see <a href="http://xowa.org/home/wiki/App/Xtn/Scripting.html" id="xolnki_2" title="App/Xtn/Scripting">the scripting help page</a>
+          For more information, see <a href="http://xowa.org/home/wiki/App/Xtn/Scripting.html" id="xolnki_2" title="App/Xtn/Scripting" class="xowa-visited">the scripting help page</a>
         </p>
         <h2>
           <span class="mw-headline" id="Basic">Basic</span>
