--- a/home/wiki/Change_log/v3.6.3.1.html
+++ b/home/wiki/Change_log/v3.6.3.1.html
@@ -400,7 +400,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_11" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_11" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </dd>
     </dl>
     <ul>
