--- a/home/wiki/Change_log/v3.10.3.1.html
+++ b/home/wiki/Change_log/v3.10.3.1.html
@@ -25,21 +25,48 @@
       </div>
       <ul>
         <li class="toclevel-1 tocsection-1">
-          <a href="#v3.10.3.1_.282016-10-16.29"><span class="tocnumber">1</span> <span class="toctext">v3.10.3.1 (2016-10-16)</span></a> 
+          <a href="#v3.10.3.2_.282016-10-17.29"><span class="tocnumber">1</span> <span class="toctext">v3.10.3.2 (2016-10-17)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-2">
-              <a href="#Wiki"><span class="tocnumber">1.1</span> <span class="toctext">Wiki</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-3">
-              <a href="#PC"><span class="tocnumber">1.2</span> <span class="toctext">PC</span></a>
+              <a href="#PC"><span class="tocnumber">1.1</span> <span class="toctext">PC</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-4">
-          <a href="#Android"><span class="tocnumber">2</span> <span class="toctext">Android</span></a>
+        <li class="toclevel-1 tocsection-3">
+          <a href="#v3.10.3.1_.282016-10-16.29"><span class="tocnumber">2</span> <span class="toctext">v3.10.3.1 (2016-10-16)</span></a> 
+          <ul>
+            <li class="toclevel-2 tocsection-4">
+              <a href="#Wiki"><span class="tocnumber">2.1</span> <span class="toctext">Wiki</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-5">
+              <a href="#PC_2"><span class="tocnumber">2.2</span> <span class="toctext">PC</span></a>
+            </li>
+          </ul>
+        </li>
+        <li class="toclevel-1 tocsection-6">
+          <a href="#Android"><span class="tocnumber">3</span> <span class="toctext">Android</span></a>
         </li>
       </ul>
     </div>
+    <h2>
+      <span class="mw-headline" id="v3.10.3.2_.282016-10-17.29">v3.10.3.2 (2016-10-17)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="PC">PC</span>
+    </h3>
+    <ul>
+      <li>
+        DownloadCentral: Show 2016-10 entries for English / German Wikipedia in Download Central. {detected by Ope30}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Include latest download central database.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_3" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
+      </dd>
+    </dl>
     <h2>
       <span class="mw-headline" id="v3.10.3.1_.282016-10-16.29">v3.10.3.1 (2016-10-16)</span>
     </h2>
@@ -53,7 +80,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_4" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -63,11 +90,11 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_3" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_5" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h3>
-      <span class="mw-headline" id="PC">PC</span>
+      <span class="mw-headline" id="PC_2">PC</span>
     </h3>
     <p>
       <b>major</b>
@@ -149,7 +176,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Xtn/Scripting.html" id="xolnki_4" title="App/Xtn/Scripting" class="xowa-visited">App/Xtn/Scripting</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Xtn/Scripting.html" id="xolnki_6" title="App/Xtn/Scripting" class="xowa-visited">App/Xtn/Scripting</a>
       </dd>
     </dl>
     <p>
@@ -243,7 +270,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_5" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_7" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </dd>
     </dl>
     <ul>
@@ -269,7 +296,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_6" title="Wiki setup/Listing" class="xowa-visited">Wiki_setup/Listing</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_8" title="Wiki setup/Listing" class="xowa-visited">Wiki_setup/Listing</a>
       </dd>
     </dl>
     <ul>
@@ -279,7 +306,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Files/Deletion.html" id="xolnki_7" title="Dashboard/Files/Deletion" class="xowa-visited">Dashboard/Files/Deletion</a> <a href="https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Files/Deletion.html" id="xolnki_9" title="Dashboard/Files/Deletion" class="xowa-visited">Dashboard/Files/Deletion</a> <a href="https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa</a>
       </dd>
     </dl>
     <ul>
