--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -399,10 +399,10 @@
           fr.wikipedia.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          1969-12-31
+          2016-10-01
         </td>
         <td class='cell_center'>
           2016-10-01
@@ -411,13 +411,13 @@
           Dump complete
         </td>
         <td class='cell_center'>
-          xdat
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
         </td>
         <td class='cell_center'>
           v1
-        </td>
-        <td class='cell_center'>
-          v2
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikipedia.org")'>Import</button>
