--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -92,6 +92,14 @@
     </p>
     <ul>
       <li>
+        (PC) Fix 2016-10 entries for English and German Wikipedia not showing in Download Central
+      </li>
+    </ul>
+    <p>
+      v3.10.3.1 features the following:
+    </p>
+    <ul>
+      <li>
         (Wiki) Release 2016-10 English and German Wikipedia
       </li>
       <li>
