--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -21,7 +21,7 @@
       All files are available at <a href="https://github.com/gnosygnu/xowa/releases/" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/releases/</a>
     </p>
     <p>
-      For more details about the release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_2" title="Blog">Blog</a>
+      For more details about the release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_2" title="Blog">Blog</a> or the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_3" title="Change log">Change log</a>
     </p>
     <h2>
       <span class="mw-headline" id="Windows">Windows</span>
@@ -69,7 +69,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.10.3.2/xowa_app_android_v3.10.3.1.apk" rel="nofollow" class="external text">Android</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.10.3.1/xowa_app_android_v3.10.3.1.apk" rel="nofollow" class="external text">Android</a>
       </li>
     </ul>
     <h2>
@@ -104,7 +104,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Include latest download central database.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_3" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_4" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_4" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_5" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h2>
@@ -120,7 +120,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_5" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_6" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -130,7 +130,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_6" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_7" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -216,7 +216,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Xtn/Scripting.html" id="xolnki_7" title="App/Xtn/Scripting" class="xowa-visited">App/Xtn/Scripting</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Xtn/Scripting.html" id="xolnki_8" title="App/Xtn/Scripting" class="xowa-visited">App/Xtn/Scripting</a>
       </dd>
     </dl>
     <p>
@@ -310,7 +310,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_8" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_9" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
       </dd>
     </dl>
     <ul>
@@ -336,7 +336,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_9" title="Wiki setup/Listing" class="xowa-visited">Wiki_setup/Listing</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_10" title="Wiki setup/Listing" class="xowa-visited">Wiki_setup/Listing</a>
       </dd>
     </dl>
     <ul>
@@ -346,7 +346,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Files/Deletion.html" id="xolnki_10" title="Dashboard/Files/Deletion" class="xowa-visited">Dashboard/Files/Deletion</a> <a href="https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Files/Deletion.html" id="xolnki_11" title="Dashboard/Files/Deletion" class="xowa-visited">Dashboard/Files/Deletion</a> <a href="https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa</a>
       </dd>
     </dl>
     <ul>
