--- a/home/wiki/Change_log/2016.html
+++ b/home/wiki/Change_log/2016.html
@@ -2517,7 +2517,7 @@
         Scribunto: Handle multi-byte characters for lua bracketed regular expressions (resolves nothing known). See: <a href="https://en.wiktionary.org/wiki/どう" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/どう</a> <a href="https://en.wiktionary.org/wiki/를" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/를</a>
       </li>
       <li>
-        Luaj: Use HOUR_OF_DAY for os.time, not HOUR (resolves hour off by 12 for os.time calls). See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_29" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
+        Luaj: Use HOUR_OF_DAY for os.time, not HOUR (resolves hour off by 12 for os.time calls). See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_29" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
       </li>
       <li>
         Xtns.Dpl: Write href using full_db not page_txt; EX:Category:A B -&gt; Category:A_B x&gt; A B. See: <a href="https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions" rel="nofollow" class="external free">https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions</a>
