--- a/home/wiki/Change_log/v3.9.4.1.html
+++ b/home/wiki/Change_log/v3.9.4.1.html
@@ -222,7 +222,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Fix regex pattern for matching end of string.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Rimbaud_le_fils" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Rimbaud_le_fils</a> <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_3" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Rimbaud_le_fils" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Rimbaud_le_fils</a> <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_3" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
       </dd>
     </dl>
     <ul>
