--- a/home/wiki/Dashboard/Import/Offline.html
+++ b/home/wiki/Dashboard/Import/Offline.html
@@ -859,11 +859,8 @@
         <td>
           <p>
             <select id='xowa_category_list' class='options_select'>
-              <option value="create_version1">
-                version 1
-              </option>
-              <option value="create_version2">
-                version 2
+              <option value="skip">
+                skip
               </option>
               <option value="update_version2">
                 only update to version 2
