--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -190,10 +190,10 @@
           en.wikibooks.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          2016-09-01
+          2016-10-01
         </td>
         <td class='cell_center'>
           2016-10-01
@@ -225,10 +225,10 @@
           en.wikinews.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          2016-09-01
+          2016-10-01
         </td>
         <td class='cell_center'>
           2016-10-01
@@ -253,6 +253,40 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikinews.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          en.wikinews_current.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+        </td>
+        <td class='cell_center'>
+          &lt;&lt;NULL&gt;&gt;
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikinews_current.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikinews_current.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikinews_current.org")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -292,47 +326,13 @@
       </tr>
       <tr>
         <td>
-          en.wikipedia.org_old
+          en.wikiquote.org
         </td>
         <td class='cell_center'>
           n
         </td>
         <td class='cell_center'>
-          2016-09-01
-        </td>
-        <td class='cell_center'>
-        </td>
-        <td class='cell_center'>
-          &lt;&lt;NULL&gt;&gt;
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v2
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikipedia.org_old")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikipedia.org_old")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikipedia.org_old")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          en.wikiquote.org
-        </td>
-        <td class='cell_center'>
-          y
-        </td>
-        <td class='cell_center'>
-          2016-09-01
+          2016-10-01
         </td>
         <td class='cell_center'>
           2016-10-01
@@ -361,13 +361,13 @@
       </tr>
       <tr>
         <td>
-          en.wiktionary.org
+          en.wikisource.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          2016-06-01
+          2016-10-01
         </td>
         <td class='cell_center'>
           2016-10-01
@@ -379,7 +379,112 @@
           sqlite3
         </td>
         <td class='cell_center'>
-          v2
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikisource.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikisource.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikisource.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          en.wikiversity.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikiversity.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikiversity.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikiversity.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          en.wikivoyage.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikivoyage.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikivoyage.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikivoyage.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          en.wiktionary.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
         </td>
         <td class='cell_center'>
           v1
@@ -392,6 +497,40 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wiktionary.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          en.wiktionary_cur.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+        </td>
+        <td class='cell_center'>
+          &lt;&lt;NULL&gt;&gt;
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wiktionary_cur.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wiktionary_cur.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wiktionary_cur.org")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -495,6 +634,76 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("nethackwiki_current.xml")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          nl.wikipedia.org
+        </td>
+        <td class='cell_center'>
+          y
+        </td>
+        <td class='cell_center'>
+          1969-12-31
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          xdat
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          v2
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("nl.wikipedia.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("nl.wikipedia.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("nl.wikipedia.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          nl.wiktionary.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("nl.wiktionary.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("nl.wiktionary.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("nl.wiktionary.org")'>Search</button>
         </td>
       </tr>
       <tr>
