--- a/home/wiki/Wiki_setup/German_wikis.html
+++ b/home/wiki/Wiki_setup/German_wikis.html
@@ -104,97 +104,100 @@
                   <a href="#de.wikipedia.org_Articles_.282016-10.29"><span class="tocnumber">4.1.1</span> <span class="toctext">de.wikipedia.org Articles (2016-10)</span></a>
                 </li>
                 <li class="toclevel-3 tocsection-13">
-                  <a href="#de.wikipedia.org_Images_.282016-06.29"><span class="tocnumber">4.1.2</span> <span class="toctext">de.wikipedia.org Images (2016-06)</span></a>
+                  <a href="#de.wikipedia.org_patch-1_.282016-10.29"><span class="tocnumber">4.1.2</span> <span class="toctext">de.wikipedia.org patch-1 (2016-10)</span></a>
                 </li>
                 <li class="toclevel-3 tocsection-14">
-                  <a href="#de.wikipedia.org_Images_.282016-08.29"><span class="tocnumber">4.1.3</span> <span class="toctext">de.wikipedia.org Images (2016-08)</span></a>
+                  <a href="#de.wikipedia.org_Images_.282016-06.29"><span class="tocnumber">4.1.3</span> <span class="toctext">de.wikipedia.org Images (2016-06)</span></a>
                 </li>
                 <li class="toclevel-3 tocsection-15">
-                  <a href="#de.wikipedia.org_Images_.282016-09.29"><span class="tocnumber">4.1.4</span> <span class="toctext">de.wikipedia.org Images (2016-09)</span></a>
+                  <a href="#de.wikipedia.org_Images_.282016-08.29"><span class="tocnumber">4.1.4</span> <span class="toctext">de.wikipedia.org Images (2016-08)</span></a>
                 </li>
                 <li class="toclevel-3 tocsection-16">
-                  <a href="#de.wikipedia.org_Images_.282016-10.29"><span class="tocnumber">4.1.5</span> <span class="toctext">de.wikipedia.org Images (2016-10)</span></a>
+                  <a href="#de.wikipedia.org_Images_.282016-09.29"><span class="tocnumber">4.1.5</span> <span class="toctext">de.wikipedia.org Images (2016-09)</span></a>
+                </li>
+                <li class="toclevel-3 tocsection-17">
+                  <a href="#de.wikipedia.org_Images_.282016-10.29"><span class="tocnumber">4.1.6</span> <span class="toctext">de.wikipedia.org Images (2016-10)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-17">
+            <li class="toclevel-2 tocsection-18">
               <a href="#de.wiktionary.org"><span class="tocnumber">4.2</span> <span class="toctext">de.wiktionary.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-18">
+                <li class="toclevel-3 tocsection-19">
                   <a href="#de.wiktionary.org_Articles_.282016-06.29"><span class="tocnumber">4.2.1</span> <span class="toctext">de.wiktionary.org Articles (2016-06)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-19">
+                <li class="toclevel-3 tocsection-20">
                   <a href="#de.wiktionary.org_Images_.282016-06.29"><span class="tocnumber">4.2.2</span> <span class="toctext">de.wiktionary.org Images (2016-06)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-20">
+            <li class="toclevel-2 tocsection-21">
               <a href="#de.wikisource.org"><span class="tocnumber">4.3</span> <span class="toctext">de.wikisource.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-21">
+                <li class="toclevel-3 tocsection-22">
                   <a href="#de.wikisource.org_Articles_.282016-06.29"><span class="tocnumber">4.3.1</span> <span class="toctext">de.wikisource.org Articles (2016-06)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-22">
+                <li class="toclevel-3 tocsection-23">
                   <a href="#de.wikisource.org_Images_.282016-06.29"><span class="tocnumber">4.3.2</span> <span class="toctext">de.wikisource.org Images (2016-06)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-23">
+            <li class="toclevel-2 tocsection-24">
               <a href="#de.wikivoyage.org"><span class="tocnumber">4.4</span> <span class="toctext">de.wikivoyage.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-24">
+                <li class="toclevel-3 tocsection-25">
                   <a href="#de.wikivoyage.org_Articles_.282016-06.29"><span class="tocnumber">4.4.1</span> <span class="toctext">de.wikivoyage.org Articles (2016-06)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-25">
+                <li class="toclevel-3 tocsection-26">
                   <a href="#de.wikivoyage.org_Images_.282016-06.29"><span class="tocnumber">4.4.2</span> <span class="toctext">de.wikivoyage.org Images (2016-06)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-26">
+            <li class="toclevel-2 tocsection-27">
               <a href="#de.wikiquote.org"><span class="tocnumber">4.5</span> <span class="toctext">de.wikiquote.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-27">
+                <li class="toclevel-3 tocsection-28">
                   <a href="#de.wikiquote.org_Articles_.282016-06.29"><span class="tocnumber">4.5.1</span> <span class="toctext">de.wikiquote.org Articles (2016-06)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-28">
+                <li class="toclevel-3 tocsection-29">
                   <a href="#de.wikiquote.org_Images_.282016-06.29"><span class="tocnumber">4.5.2</span> <span class="toctext">de.wikiquote.org Images (2016-06)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-29">
+            <li class="toclevel-2 tocsection-30">
               <a href="#de.wikibooks.org"><span class="tocnumber">4.6</span> <span class="toctext">de.wikibooks.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-30">
+                <li class="toclevel-3 tocsection-31">
                   <a href="#de.wikibooks.org_Articles_.282016-06.29"><span class="tocnumber">4.6.1</span> <span class="toctext">de.wikibooks.org Articles (2016-06)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-31">
+                <li class="toclevel-3 tocsection-32">
                   <a href="#de.wikibooks.org_Images_.282016-06.29"><span class="tocnumber">4.6.2</span> <span class="toctext">de.wikibooks.org Images (2016-06)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-32">
+            <li class="toclevel-2 tocsection-33">
               <a href="#de.wikiversity.org"><span class="tocnumber">4.7</span> <span class="toctext">de.wikiversity.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-33">
+                <li class="toclevel-3 tocsection-34">
                   <a href="#de.wikiversity.org_Articles_.282016-06.29"><span class="tocnumber">4.7.1</span> <span class="toctext">de.wikiversity.org Articles (2016-06)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-34">
+                <li class="toclevel-3 tocsection-35">
                   <a href="#de.wikiversity.org_Images_.282016-06.29"><span class="tocnumber">4.7.2</span> <span class="toctext">de.wikiversity.org Images (2016-06)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-35">
+            <li class="toclevel-2 tocsection-36">
               <a href="#de.wikinews.org"><span class="tocnumber">4.8</span> <span class="toctext">de.wikinews.org</span></a> 
               <ul>
-                <li class="toclevel-3 tocsection-36">
+                <li class="toclevel-3 tocsection-37">
                   <a href="#de.wikinews.org_Articles_.282016-06.29"><span class="tocnumber">4.8.1</span> <span class="toctext">de.wikinews.org Articles (2016-06)</span></a>
                 </li>
-                <li class="toclevel-3 tocsection-37">
+                <li class="toclevel-3 tocsection-38">
                   <a href="#de.wikinews.org_Images_.282016-06.29"><span class="tocnumber">4.8.2</span> <span class="toctext">de.wikinews.org Images (2016-06)</span></a>
                 </li>
               </ul>
             </li>
-            <li class="toclevel-2 tocsection-38">
+            <li class="toclevel-2 tocsection-39">
               <a href="#All_links"><span class="tocnumber">4.9</span> <span class="toctext">All links</span></a>
             </li>
           </ul>
@@ -220,6 +223,15 @@
         <dl>
           <dd>
             Deutsch Wikipedia - Articles (2016-10) [10.38 GB]
+          </dd>
+        </dl>
+      </dd>
+    </dl>
+    <dl>
+      <dd>
+        <dl>
+          <dd>
+            Deutsch Wikipedia - Patch (2016-10) [401.2 MB]
           </dd>
         </dl>
       </dd>
@@ -519,6 +531,21 @@
       <ul>
         <li>
           <a href="http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-10_html_ns.100.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-10_html_ns.100.zip</a>
+        </li>
+      </ul>
+    </div>
+    <h4>
+      <span class="mw-headline" id="de.wikipedia.org_patch-1_.282016-10.29">de.wikipedia.org patch-1 (2016-10)</span>
+    </h4>
+    <div style="margin-left: 2em">
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-1_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-1_core.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-1_html_ns.008.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-1_html_ns.008.zip</a>
         </li>
       </ul>
     </div>
@@ -1123,6 +1150,8 @@ http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-10_file_ns.004_d
 http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-10_file_ns.014_db.001.zip
 http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-10_file_ns.100_db.001.zip
 http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2016-10_file_ns.000_db.028.zip
+http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-1_core.zip
+http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_patch-1_html_ns.008.zip
 http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiktionary_2016-06_core.zip
 http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiktionary_2016-06_xtn.search.core.zip
 http://archive.org/download/Xowa_dewiki_latest/Xowa_dewiktionary_2016-06_html_ns.000.zip
